# bq-agent-app

./: .env.cloud.example  .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  setup.sh
bq-agent-app/: .env  agent.py
bq-agent-app-mcp/: agent.py
bq-agent-app-mcp/mcp-toolbox/: install-mcp-toolbox.sh
bq_agent_adk/: agent.py
bq_agent_app_mcp/: .env
bq_multi_agent_app/: .agent_engine_config.json  .env.example  ARCHITECTURE.md  __init__.py  agent.py  auth.py  constants.py  credentials.py  prompts.py  requirements.txt  subagents.py  test_agent.py  tools.py
bq_multi_agent_app/sub_agents/: __init__.py
bq_multi_agent_app/sub_agents/bqml_agents/: agent.py  prompts.py  tools.py
bq_multi_agent_app/sub_agents/ds_agents/: agent.py  prompts.py
bq_multi_agent_app/sub_agents/research_agents/: __init__.py  agent.py  prompts.py
deployment/: __init__.py  deploy.py  deploy.sh  register_gemini_enterprise.sh  test_deployment.py
mcp_toolbox_setup/: .dockerignore  MCP_TOOLBOX_GUIDE.md  deploy.sh  install-mcp-toolbox.sh
scripts/: expose_to_agentspace.sh  test_agent_engine.py
setup/: probe_code_interpreter.py
setup/agent_engine/: test_agent_engine.py
setup/agentspace/: AGENTSPACE_MANAGEMENT_GUIDE.md  manage_agentspace.sh
setup/mcp_toolbox/: Dockerfile  Dockerfile.local  MCP_TOOLBOX_GUIDE.md  deploy.sh  install-mcp-toolbox.sh  tools.yaml
setup/mcp_toolbox_ca_issue/: BIGQUERY_CONVERSATIONAL_ANALYTICS_FIX.md  github_issue.md  results_fix.txt  test_detailed_error.py
setup/rag_corpus/: create_bqml_corpus.py  test_rag.py
setup/vertex_extensions/: VERTEX_EXTENSIONS_GUIDE.md  cleanup_vertex_extensions.py  setup_vertex_extensions.py  utils.py
tests/: conftest.py  test_agent.py  test_auth.py  test_bqml_tools.py  test_prompts.py  test_tools.py
vertex_extensions_setup/: VERTEX_EXTENSIONS_GUIDE.md  setup_vertex_extensions.py
